--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "lib/dense_flow"]
-	path = lib/dense_flow
+	path = temporal-segment-networks/lib/dense_flow
 	url = https://github.com/yjxiong/dense_flow
 [submodule "lib/caffe_action"]
-	path = lib/caffe-action
+	path = temporal-segment-networks/lib/caffe-action
 	url = https://github.com/sevico/caffe
 	branch=action_recog
